--- a/src/content/pages/6-Map.html
+++ b/src/content/pages/6-Map.html
@@ -12,4 +12,4 @@
     <p>Para filtrar los diferentes lugares clickee en el icono superior izquierdo.</p>
 </div>
 
-<iframe src="https://www.google.com/maps/d/embed?mid=15XX0dFN-9keHLwKZf3hsz8lVvuMsfDM&hl=en&ehbc=2E312F" width="1000" height="500"></iframe>
+<iframe class="map" src="https://www.google.com/maps/d/embed?mid=15XX0dFN-9keHLwKZf3hsz8lVvuMsfDM&hl=en&ehbc=2E312F" width="1000" height="500"></iframe>
