--- a/src/content/pages/6-Map.html
+++ b/src/content/pages/6-Map.html
@@ -7,9 +7,8 @@
     <a href="https://41ibi.github.io/code_copycats/6-Map"><button  class="button-61 " role="button ">MAP</button></a>
 </nav>
 <div>
-    <h2>Map of places and geographical features - Mapa de lugares y accidentes geográficos</h2>
-    <p>To filter the different places click on the upper left icon.</p>
-    <p>Para filtrar los diferentes lugares clickee en el icono superior izquierdo.</p>
+    <h3>Map of places and geographical features - Mapa de lugares y accidentes geográficos</h3>
+    <p>To filter the different places click on the upper left icon. Para filtrar los diferentes lugares clickee en el icono superior izquierdo.</p>
 </div>
 
 <iframe class="map" src="https://www.google.com/maps/d/embed?mid=15XX0dFN-9keHLwKZf3hsz8lVvuMsfDM&hl=en&ehbc=2E312F" width="1000" height="500"></iframe>
