--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -5,3 +5,26 @@
     <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
     <a href="https://41ibi.github.io/code_copycats/5-Vocabulary"><button  class="button-61 " role="button ">VOCABULARY</button></a><a href="https://41ibi.github.io/code_copycats/6-Map"><button  class="button-61 " role="button ">MAP</button></a>
 </nav>
+
+<h4>Vocabulary</h4>
+<a class="place" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>/<a class="place" href="https://en.wikipedia.org/wiki/Americas">America</a>
+<a class="place" href="">Buenos Aires</a>
+<a class="place" href="">Chile</a>
+<a class="place" href="">Córdoba</a>
+<a class="etnias" href="">Españoles</a>
+<a class="mesure" href="">Leguas</a>
+<a class="place" href="">Jujuy</a>
+<a class="etnias" href="">Pampistas</a>
+<a class="currency" href="">Patacones</a>
+<a class="place" href="">Paraguay</a>
+<a class="place" href="">Perú</a>
+<a class="etnias" href="">Portugueses</a>
+<a class="place" href="">Recife</a>
+<a class="placeGeog" href="">Rio de la Plata</a>
+<a class="placeGeog" href="">Rio de Luján</a>
+<a class="placeGeog" href="">Rio Recife</a>
+<a class="placeGeog" href="">Rio Saladillo</a>
+<a class="place" href="">Salta</a>
+<a class="place" href="">Santa Fe</a>
+<a class="place" href="">Santiago de Estero</a>
+<a class="etnias" href="">Serranos</a>
