--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -7,24 +7,72 @@
 </nav>
 
 <h4>Vocabulary</h4>
-<a class="place" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>/<a class="place" href="https://en.wikipedia.org/wiki/Americas">America</a>
-<a class="place" href="">Buenos Aires</a>
-<a class="place" href="">Chile</a>
-<a class="place" href="">Córdoba</a>
-<a class="etnias" href="">Españoles</a>
-<a class="mesure" href="">Leguas</a>
-<a class="place" href="">Jujuy</a>
-<a class="etnias" href="">Pampistas</a>
-<a class="currency" href="">Patacones</a>
-<a class="place" href="">Paraguay</a>
-<a class="place" href="">Perú</a>
-<a class="etnias" href="">Portugueses</a>
-<a class="place" href="">Recife</a>
-<a class="placeGeog" href="">Rio de la Plata</a>
-<a class="placeGeog" href="">Rio de Luján</a>
-<a class="placeGeog" href="">Rio Recife</a>
-<a class="placeGeog" href="">Rio Saladillo</a>
-<a class="place" href="">Salta</a>
-<a class="place" href="">Santa Fe</a>
-<a class="place" href="">Santiago de Estero</a>
-<a class="etnias" href="">Serranos</a>
+<ul>
+    <li>
+        <a class="place" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>|<a class="place" href="https://en.wikipedia.org/wiki/Americas">America</a>
+        <a class="place" href="https://es.wikipedia.org/wiki/Buenos_Aires">Buenos Aires</a>|<a class="place" href="https://en.wikipedia.org/wiki/Buenos_Aires">Buenos Ayres</a></li>
+    <li>
+        <a class="place" href="https://es.wikipedia.org/wiki/Chile">Chile</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Chile">Chili</a>
+    </li>
+    <li>
+        <a class="place" href="https://es.wikipedia.org/wiki/C%C3%B3rdoba_(Argentina)">Córdoba</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/C%C3%B3rdoba,_Argentina">Cordoua</a>
+    </li>
+    <li>
+        <a class="etnias" href="https://es.wikipedia.org/wiki/Espa%C3%B1oles">Españoles</a>|
+        <a class="etnias" href="https://en.wikipedia.org/wiki/Spaniards">Spaniards</a>
+    </li>
+    <li>
+        <a class="unit" href="https://es.wikipedia.org/wiki/Legua">Legua</a>|
+        <a class="unit" href="https://en.wikipedia.org/wiki/League_(unit)#Spain">League</a>
+    </li>
+    <li>
+        <a class="place" href="https://es.wikipedia.org/wiki/Provincia_de_Jujuy">Jujuy</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Jujuy_Province">Jujuy</a>
+    </li>
+    <li><a class="etnias" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
+        <a class="etnias" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
+    </li>
+    <li><a class="currency" href="https://es.wikipedia.org/wiki/Patac%C3%B3n_(moneda)">Patacón</a>|
+        <a class="currency" href="https://en.wikipedia.org/wiki/Patac%C3%B3n_(bond)">Patagon</a>
+    </li>
+    <li><a class="place" href="https://es.wikipedia.org/wiki/Paraguay">Paraguay</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Paraguay">Paraguay</a>
+    </li>
+    <li><a class="place" href="https://es.wikipedia.org/wiki/Per%C3%BA">Perú</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Peru">Peru</a>
+    </li>
+    <li><a class="etnias" href="https://es.wikipedia.org/wiki/Portugueses">Portugueses</a>|
+        <a class="etnias" href="https://en.wikipedia.org/wiki/Portuguese_people">Portuguese people</a>
+    </li>
+    <li><a class="place" href="https://es.wikipedia.org/wiki/Arrecifes_(Argentina)">Arrecifes</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Arrecifes">Recife</a>
+    </li>
+    <li><a class="placeGeog" href="">Rio de la Plata</a>|
+        <a class="placeGeog" href="">River de la Plata</a>
+    </li>
+    <li><a class="placeGeog" href="https://es.wikipedia.org/wiki/R%C3%ADo_Luj%C3%A1n">Rio de Luján</a>|
+        <a class="placeGeog" href="https://en.wikipedia.org/wiki/Luj%C3%A1n_River">River Lujan</a>
+    </li>
+    <li><a class="placeGeog" href="https://es.wikipedia.org/wiki/R%C3%ADo_Arrecifes">Rio Arrecifes</a>|
+        <a class="placeGeog" href="https://en.wikipedia.org/wiki/Arrecifes_River">River Recife</a>
+    </li>
+    <li><a class="placeGeog" href="https://es.wikipedia.org/wiki/Saladillo_(C%C3%B3rdoba)">Rio Saladillo</a>|
+        <a class="placeGeog" href="https://en.wikipedia.org/wiki/Saladillo_River">River Saladillo</a>
+    </li>
+    <li><a class="place" href="https://es.wikipedia.org/wiki/Salta">Salta</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Salta_Province">Salta</a>
+    </li>
+    <li><a class="place" href="https://es.wikipedia.org/wiki/Santa_Fe_(Argentina)">Santa Fe</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/Santa_Fe_Province">Santa Fe</a>
+    </li>
+    <li><a class="place" href="https://en.wikipedia.org/wiki/Santiago_del_Estero">Santiago de Estero</a>|
+        <a class="place" href="https://es.wikipedia.org/wiki/Provincia_de_Santiago_del_Estero">Santiago de Estero</a>
+    </li>
+    <li><a class="place" href="https://es.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">San Miguel de Tucumán</a>|
+        <a class="place" href="https://en.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">St. Miguel de Tucuman</a>
+    </li>
+
+    <li><a class="etnias" href="https://es.wikipedia.org/wiki/Sierra_(geograf%C3%ADa)">Serrano</a>|
+        <a class="etnias" href="https://en.wikipedia.org/wiki/Mountain_chain">Serrano</a>
