--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -9,7 +9,8 @@
 <h4>Vocabulary</h4>
 <ul>
     <li>
-        <a class="place" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>|<a class="place" href="https://en.wikipedia.org/wiki/Americas">America</a>
+        <a class="place" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>|<a class="place" href="https://en.wikipedia.org/wiki/Americas">America</a></li>
+    <li>
         <a class="place" href="https://es.wikipedia.org/wiki/Buenos_Aires">Buenos Aires</a>|<a class="place" href="https://en.wikipedia.org/wiki/Buenos_Aires">Buenos Ayres</a></li>
     <li>
         <a class="place" href="https://es.wikipedia.org/wiki/Chile">Chile</a>|
