--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -1,79 +1,80 @@
 <nav style="text-align: right" ;>
-    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a><a href="https://41ibi.github.io/code_copycats/1-About%20us"><button  class="button-61" role="button">ABOUT</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a><a target="_blank" href="https://41ibi.github.io/code_copycats/1-About%20us"><button  class="button-61" role="button">ABOUT</button></a>
     <a href="https://41ibi.github.io/code_copycats/2-Our%20team"><button  class=" button-61 " role="button ">TEAM</button></a>
     <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
-    <a href="https://41ibi.github.io/code_copycats/5-Vocabulary"><button  class="button-61 " role="button ">VOCABULARY</button></a><a href="https://41ibi.github.io/code_copycats/6-Map"><button  class="button-61 " role="button ">MAP</button></a>
+    <a href="https://41ibi.github.io/code_copycats/5-Vocabulary"><button  class="button-61 " role="button ">VOCABULARY</button></a>
+    <a href="https://41ibi.github.io/code_copycats/6-Map"><button  class="button-61 " role="button ">MAP</button></a>
 </nav>
 
 <h4>Vocabulary</h4>
 <ul>
     <li>
-        <a class="place" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>|<a class="place" href="https://en.wikipedia.org/wiki/Americas">America</a></li>
+        <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>|<a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Americas">America</a></li>
     <li>
-        <a class="place" href="https://es.wikipedia.org/wiki/Buenos_Aires">Buenos Aires</a>|<a class="place" href="https://en.wikipedia.org/wiki/Buenos_Aires">Buenos Ayres</a></li>
+        <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Buenos_Aires">Buenos Aires</a>|<a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Buenos_Aires">Buenos Ayres</a></li>
     <li>
-        <a class="place" href="https://es.wikipedia.org/wiki/Chile">Chile</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Chile">Chili</a>
-    </li>
-    <li>
-        <a class="place" href="https://es.wikipedia.org/wiki/C%C3%B3rdoba_(Argentina)">Córdoba</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/C%C3%B3rdoba,_Argentina">Cordoua</a>
+        <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Chile">Chile</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Chile">Chili</a>
     </li>
     <li>
-        <a class="etnias" href="https://es.wikipedia.org/wiki/Espa%C3%B1oles">Españoles</a>|
-        <a class="etnias" href="https://en.wikipedia.org/wiki/Spaniards">Spaniards</a>
+        <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/C%C3%B3rdoba_(Argentina)">Córdoba</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/C%C3%B3rdoba,_Argentina">Cordoua</a>
     </li>
     <li>
-        <a class="unit" href="https://es.wikipedia.org/wiki/Legua">Legua</a>|
-        <a class="unit" href="https://en.wikipedia.org/wiki/League_(unit)#Spain">League</a>
+        <a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Espa%C3%B1oles">Españoles</a>|
+        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Spaniards">Spaniards</a>
     </li>
     <li>
-        <a class="place" href="https://es.wikipedia.org/wiki/Provincia_de_Jujuy">Jujuy</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Jujuy_Province">Jujuy</a>
+        <a class="unit" target="_blank" href="https://es.wikipedia.org/wiki/Legua">Legua</a>|
+        <a class="unit" target="_blank" href="https://en.wikipedia.org/wiki/League_(unit)#Spain">League</a>
     </li>
-    <li><a class="etnias" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
-        <a class="etnias" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
+    <li>
+        <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_Jujuy">Jujuy</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Jujuy_Province">Jujuy</a>
     </li>
-    <li><a class="currency" href="https://es.wikipedia.org/wiki/Patac%C3%B3n_(moneda)">Patacón</a>|
-        <a class="currency" href="https://en.wikipedia.org/wiki/Patac%C3%B3n_(bond)">Patagon</a>
+    <li><a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
+        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
     </li>
-    <li><a class="place" href="https://es.wikipedia.org/wiki/Paraguay">Paraguay</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Paraguay">Paraguay</a>
+    <li><a class="currency" target="_blank" href="https://es.wikipedia.org/wiki/Patac%C3%B3n_(moneda)">Patacón</a>|
+        <a class="currency" target="_blank" href="https://en.wikipedia.org/wiki/Patac%C3%B3n_(bond)">Patagon</a>
     </li>
-    <li><a class="place" href="https://es.wikipedia.org/wiki/Per%C3%BA">Perú</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Peru">Peru</a>
+    <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Paraguay">Paraguay</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Paraguay">Paraguay</a>
     </li>
-    <li><a class="etnias" href="https://es.wikipedia.org/wiki/Portugueses">Portugueses</a>|
-        <a class="etnias" href="https://en.wikipedia.org/wiki/Portuguese_people">Portuguese people</a>
+    <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Per%C3%BA">Perú</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Peru">Peru</a>
     </li>
-    <li><a class="place" href="https://es.wikipedia.org/wiki/Arrecifes_(Argentina)">Arrecifes</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Arrecifes">Recife</a>
+    <li><a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Portugueses">Portugueses</a>|
+        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Portuguese_people">Portuguese people</a>
     </li>
-    <li><a class="placeGeog" href="">Rio de la Plata</a>|
-        <a class="placeGeog" href="">River de la Plata</a>
+    <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Arrecifes_(Argentina)">Arrecifes</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Arrecifes">Recife</a>
     </li>
-    <li><a class="placeGeog" href="https://es.wikipedia.org/wiki/R%C3%ADo_Luj%C3%A1n">Rio de Luján</a>|
-        <a class="placeGeog" href="https://en.wikipedia.org/wiki/Luj%C3%A1n_River">River Lujan</a>
+    <li><a class="placeGeog" target="_blank" href="">Rio de la Plata</a>|
+        <a class="placeGeog" target="_blank" href="">River de la Plata</a>
     </li>
-    <li><a class="placeGeog" href="https://es.wikipedia.org/wiki/R%C3%ADo_Arrecifes">Rio Arrecifes</a>|
-        <a class="placeGeog" href="https://en.wikipedia.org/wiki/Arrecifes_River">River Recife</a>
+    <li><a class="placeGeog" target="_blank" href="https://es.wikipedia.org/wiki/R%C3%ADo_Luj%C3%A1n">Rio de Luján</a>|
+        <a class="placeGeog" target="_blank" href="https://en.wikipedia.org/wiki/Luj%C3%A1n_River">River Lujan</a>
     </li>
-    <li><a class="placeGeog" href="https://es.wikipedia.org/wiki/Saladillo_(C%C3%B3rdoba)">Rio Saladillo</a>|
-        <a class="placeGeog" href="https://en.wikipedia.org/wiki/Saladillo_River">River Saladillo</a>
+    <li><a class="placeGeog" target="_blank" href="https://es.wikipedia.org/wiki/R%C3%ADo_Arrecifes">Rio Arrecifes</a>|
+        <a class="placeGeog" target="_blank" href="https://en.wikipedia.org/wiki/Arrecifes_River">River Recife</a>
     </li>
-    <li><a class="place" href="https://es.wikipedia.org/wiki/Salta">Salta</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Salta_Province">Salta</a>
+    <li><a class="placeGeog" target="_blank" href="https://es.wikipedia.org/wiki/Saladillo_(C%C3%B3rdoba)">Rio Saladillo</a>|
+        <a class="placeGeog" target="_blank" href="https://en.wikipedia.org/wiki/Saladillo_River">River Saladillo</a>
     </li>
-    <li><a class="place" href="https://es.wikipedia.org/wiki/Santa_Fe_(Argentina)">Santa Fe</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/Santa_Fe_Province">Santa Fe</a>
+    <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Salta">Salta</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Salta_Province">Salta</a>
     </li>
-    <li><a class="place" href="https://en.wikipedia.org/wiki/Santiago_del_Estero">Santiago de Estero</a>|
-        <a class="place" href="https://es.wikipedia.org/wiki/Provincia_de_Santiago_del_Estero">Santiago de Estero</a>
+    <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Santa_Fe_(Argentina)">Santa Fe</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Santa_Fe_Province">Santa Fe</a>
     </li>
-    <li><a class="place" href="https://es.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">San Miguel de Tucumán</a>|
-        <a class="place" href="https://en.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">St. Miguel de Tucuman</a>
+    <li><a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Santiago_del_Estero">Santiago de Estero</a>|
+        <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_Santiago_del_Estero">Santiago de Estero</a>
+    </li>
+    <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">San Miguel de Tucumán</a>|
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">St. Miguel de Tucuman</a>
     </li>
 
-    <li><a class="etnias" href="https://es.wikipedia.org/wiki/Sierra_(geograf%C3%ADa)">Serrano</a>|
-        <a class="etnias" href="https://en.wikipedia.org/wiki/Mountain_chain">Serrano</a>
+    <li><a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Sierra_(geograf%C3%ADa)">Serrano</a>|
+        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Mountain_chain">Serrano</a>
