--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -21,7 +21,18 @@
                 spelling was updated to reflect contemporary use of the language. In turn, the spelling with which it was composed was preserved in order to give the reader the option of consulting the text in its original version. The <code><choice></code>,
                 <code><orig></code>, and <code><reg></code> tags were used throughout the text. In addition, according to the characteristics of the text, in which the geographical location is highlighted, we use the <code><name></code> element with the
                 values <code>"place "</code> and <code>"placeGeog "</code> for the <code>@type=</code> attribute as well as the <code>@type</code> attribute with the value <code>"ethnicities "</code> in the element <code><rs></code> for named peoples
-                and ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance "</code>, <code>"cardinal "</code> and <code>"ordinal "</code>                in the <code>@type</code> attribute to indicate distances and amounts.</p>
+                and ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance "</code>, <code>"cardinal "</code> and <code>"ordinal "</code>                in the <code>@type</code> attribute to indicate distances and amounts. According to this classification, a color and style of text was assigned to improve its reading.
+                <ul>
+                    <li class="place">City, country or region.</li>
+                    <li class="placeGeog">Geographic accident.</li>
+                    <li class="etnia">Ethnicity.</li>
+                    <li class="currency">Currency.</li>
+                    <li class="unit">Distance.</li>
+                    <li class="orig">Word corrected by the editors.</li>
+                    <li class="corr">(Original word that has been corrected).</li>
+                </ul>
+            </p>
+
         </div>
         <div class="edition-es ">
             <div class="title-ed">
@@ -36,7 +47,17 @@
                 modernos, por lo que se procedió a actualizar la ortografía al uso contemporáneo del idioma. A su vez, se preservó la ortografía con la que fuera compuesto con la finalidad de darle al lector la opción de consultar el texto en su versión
                 original. Se utilizaron las etiquetas <code><choice></code>, <code><orig></code> y <code><reg></code> en todo el texto. Además, de acuerdo a las características del texto, en el que se destaca la ubicación geográfica, utilizamos el nombre
                 del elemento <code><name></code> con los valores <code>"place "</code> y <code>"placeGeog "</code> para el atributo <code>@type=</code> así como el atributo <code>@type</code> con el valor <code>"etnias "</code> <code><rs></code> para
-                pueblos y etnias nombrados. En un intento por profundizar el análisis del contenido topográfico también se utilizó el elemento <code><measure></code> con los valores <code>"distance "</code>, <code>"cardinal "</code> y <code>"ordinal "</code>                en el atributo <code>@type</code> para indicar distancias y cantidades.</p>
+                pueblos y etnias nombrados. En un intento por profundizar el análisis del contenido topográfico también se utilizó el elemento <code><measure></code> con los valores <code>"distance "</code>, <code>"cardinal "</code> y <code>"ordinal "</code>                en el atributo <code>@type</code> para indicar distancias y cantidades. De acuerdo a esta clasificación, se asignó un color y estilo de texto para mejorar su lectura.
+                <ul>
+                    <li class="place">Ciudad, país ol región.</li>
+                    <li class="placeGeog">Accidente geográfico.</li>
+                    <li class="etnia">Etnia.</li>
+                    <li class="currency">Moneda.</li>
+                    <li class="unit">Distancia.</li>
+                    <li class="orig">Palabra corregida a cargo de la edición.</li>
+                    <li class="corr">(Palabra original que ha sido corregida).</li>
+                </ul>
+            </p>
         </div>
     </div>
 </div>
