voc list end ed

--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -28,8 +28,8 @@
                     <li class="etnia">Ethnicity.</li>
                     <li class="currency">Currency.</li>
                     <li class="unit">Distance.</li>
-                    <li class="orig">Word corrected by the editors.</li>
-                    <li class="corr">(Original word that has been corrected).</li>
+                    <li class="corr">Word corrected by the editors.</li>
+                    <li class="orig">(Original word that has been corrected).</li>
                 </ul>
             </p>
 
@@ -54,8 +54,8 @@
                     <li class="etnia">Etnia.</li>
                     <li class="currency">Moneda.</li>
                     <li class="unit">Distancia.</li>
-                    <li class="orig">Palabra corregida a cargo de la edición.</li>
-                    <li class="corr">(Palabra original que ha sido corregida).</li>
+                    <li class="corr">Palabra corregida a cargo de la edición.</li>
+                    <li class="orig">(Palabra original que ha sido corregida).</li>
                 </ul>
             </p>
         </div>
