--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -22,8 +22,8 @@
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/C%C3%B3rdoba,_Argentina">Cordoua</a>
     </li>
     <li>
-        <a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Espa%C3%B1oles">Españoles</a>|
-        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Spaniards">Spaniards</a>
+        <a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Espa%C3%B1oles">Españoles</a>|
+        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Spaniards">Spaniards</a>
     </li>
     <li>
         <a class="unit" target="_blank" href="https://es.wikipedia.org/wiki/Legua">Legua</a>|
@@ -33,8 +33,8 @@
         <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_Jujuy">Jujuy</a>|
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Jujuy_Province">Jujuy</a>
     </li>
-    <li><a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
-        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
+    <li><a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
+        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
     </li>
     <li><a class="currency" target="_blank" href="https://es.wikipedia.org/wiki/Patac%C3%B3n_(moneda)">Patacón</a>|
         <a class="currency" target="_blank" href="https://en.wikipedia.org/wiki/Patac%C3%B3n_(bond)">Patagon</a>
@@ -45,8 +45,8 @@
     <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Per%C3%BA">Perú</a>|
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Peru">Peru</a>
     </li>
-    <li><a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Portugueses">Portugueses</a>|
-        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Portuguese_people">Portuguese people</a>
+    <li><a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Portugueses">Portugueses</a>|
+        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Portuguese_people">Portuguese people</a>
     </li>
     <li><a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Arrecifes_(Argentina)">Arrecifes</a>|
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Arrecifes">Recife</a>
@@ -76,5 +76,5 @@
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/San_Miguel_de_Tucum%C3%A1n">St. Miguel de Tucuman</a>
     </li>
 
-    <li><a class="etnias" target="_blank" href="https://es.wikipedia.org/wiki/Sierra_(geograf%C3%ADa)">Serrano</a>|
-        <a class="etnias" target="_blank" href="https://en.wikipedia.org/wiki/Mountain_chain">Serrano</a>
+    <li><a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Sierra_(geograf%C3%ADa)">Serrano</a>|
+        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Mountain_chain">Serrano</a>
