--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -8,7 +8,7 @@
 </nav>
 
 <h4>Vocabulary</h4>
-<ul>
+<ul class="voclist">
     <li>
         <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/Am%C3%A9rica">América</a>|<a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Americas">America</a></li>
     <li>
@@ -34,7 +34,7 @@
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Jujuy_Province">Jujuy</a>
     </li>
     <li><a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
-        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
+        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Panpistas</a>
     </li>
     <li><a class="currency" target="_blank" href="https://es.wikipedia.org/wiki/Patac%C3%B3n_(moneda)">Patacón</a>|
         <a class="currency" target="_blank" href="https://en.wikipedia.org/wiki/Patac%C3%B3n_(bond)">Patagon</a>
