about with logo

--- a/src/content/pages/About us.html
+++ b/src/content/pages/About us.html
@@ -8,6 +8,9 @@
 
 <div>
     <div class="edition ">
+        <div class="edition-header">
+            <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
+        </div>
         <div class="edition-en ">
             <div class="title-ed">
                 <h3>About us </h3>
