--- a/src/content/pages/1-About us.html
+++ b/src/content/pages/1-About us.html
@@ -6,14 +6,31 @@
     <a href="https://41ibi.github.io/code_copycats/5-Vocabulary"><button  class="button-61 " role="button ">VOCABULARY</button></a><a href="https://41ibi.github.io/code_copycats/6-Map"><button  class="button-61 " role="button ">MAP</button></a>
 </nav>
 
-<div class="aboutus">
-    <div class="abouten">
-        <p> <b>The Code Copycats</b> are a group that integrates students from the <b>University of Maryland</b> and the <b>Universidad del Salvador.</b>. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual
-            static site of the text <em>An Account of a Voyage up the River de la Plata (TEI edition)</em> This project is currently in progress and goes hand in hand with the course <em>Digital Publishing with Minimal computing: humanities at a global scale</em>,
-            with a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis
-            of the Colonial period.
-        </p>
-        <div class="aboutes">
+<div>
+    <div class="edition ">
+        <div class="edition-header">
+            <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
+            <img src="UMD_Logo-white.png" width="auto" alt="UMD lOGO">
+            <img src="USAL.png" width="auto" alt="UMD lOGO">
+
+        </div>
+        <div class="edition-en ">
+            <div class="title-ed">
+                <h3>About us </h3>
+            </div>
+
+            <p> <b>The Code Copycats</b> are a group that integrates students from the <b>University of Maryland</b> and the <b>Universidad del Salvador.</b>. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual
+                static site of the text <em>An Account of a Voyage up the River de la Plata (TEI edition)</em> This project is currently in progress and goes hand in hand with the course <em>Digital Publishing with Minimal computing: humanities at a global scale</em>,
+                with a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis
+                of the Colonial period.
+            </p>
+
+        </div>
+        <div class="edition-es ">
+            <div class="title-ed">
+                <h3>Acerca de nosotros</h3>
+            </div>
+
             <p> <b>Los Code Copycats</b> es un grupo que integra estudiantes de la <b>Universidad de Maryland </b> y la <b>Universidad del Salvador</b>. Es un grupo multicultural y multilingüe que busca desarrollar un trabajo colaborativo para construir un
                 sitio estático bilingüe del texto <em>Relato de un viaje por el Río de la Plata (edición TEI)</em> Este proyecto se encuentra actualmente en proceso y va de la mano con el curso <em>Edición digital con computación mínima: las humanidades a un escala global</em>,
                 con un enfoque en la computación mínima. Además de estudiar contenidos y formas relacionados con la cultura digital, nuestro propósito es aprender herramientas computacionales como HTML, CSS y lenguaje de codificación TEI para mejorar
@@ -23,8 +40,11 @@
         </div>
     </div>
 </div>
-<!--<footer>
+
+
+<!--
+  <footer>
     <p>
-        A project by the Code Copycats | 2022
+        A project by the Code Copycats|2022
     </p>
 </footer>-->
