--- a/src/content/pages/Charter.html
+++ b/src/content/pages/Charter.html
@@ -48,16 +48,7 @@
             Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.
 
             <h4>Team management</h4>
-            Mostly communicate files through email, Slack, and urgent messages through Whatsapp.
-            <a href="mailto:alicebi@terpmail.umd.edu " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">alicebi@terpmail.umd.edu</a>
-            </br>
-            <a href="mailto:julieta.gold@gmail.com " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">julieta.gold@gmail.com </a>
-            </br>
-            <a href="mailto:carlosnusch@prebi.unlp.edu.ar " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">carlosnusch@prebi.unlp.edu.ar</a>
-            </br>
-            <a href="mailto:Lngm@umd.edu " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">Lngm@umd.edu</a>
-            </br>
-            Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
+            Mostly communicate files through email, Slack, and urgent messages through Whatsapp. Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
             Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank " class="no-lightbox ">https://github.com/41ibi/code_copycats/</a></br>
             As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.
             <ul>
