charte and about

--- a/src/content/pages/Charter.html
+++ b/src/content/pages/Charter.html
@@ -18,7 +18,7 @@
             <p>
                 <h4>Team Members </h4>
                 <ul>
-                    <li>Julieta Goldsmidt, she/her/hers/ (ARG), HTML/CSS editor.</li>
+                    <li>Julieta Goldsmidt, she/her/hers (ARG), task manager.</li>
                     <li> Nery Gonzalez, she/hers (US), Translator. </li>
                     <li> Alice Bi, she/hers (US) technical lead.</li>
                     <li> Carlos Javier Nusch, He/his, La Plata (ARG), Submitter.</li>
@@ -68,14 +68,14 @@
             <div class="title-ed">
                 <h4>Contrato de equipo</h4>
                 <h4>Nombre del Equipo: The Code Copycats</h4>
-                <h4><i> Última actualización: 2022-09-21</i></h4>
+                <h4><i> Última actualización: 06-12-22</i></h4>
             </div>
             <h4>Miembros del equipo</h4>
             <p>
                 <ul>
-                    <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
-                    <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
-                    <li> Alice Bi, she/hers (US) technical lead.</li>
+                    <li>Julieta Goldsmidt, ella, (ARG), organizadora de tareas.</li>
+                    <li> Nery Gonzalez, she/hers y ella, (US), Traductora. </li>
+                    <li> Alice Bi, she/hers (US) líder tecnica.</li>
                     <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
                 </ul>
                 <h4>Objetivos</h4>
@@ -90,7 +90,7 @@
                 <h4>Fundamentos</h4>
                 <h5>Respeto</h5>
                 <p>Respetar y compartir la experiencia de cada uno, reconociendo que todos tienen algo que aportar a nuestro proyecto.</p>
-                <h4>Comunicación Honesta</h4>
+                <h5>Comunicación Honesta</h5>
                 Esperamos comunicarnos con frecuencia y honestidad sobre el progreso, incluidos los problemas, las correcciones y otras soluciones, para que podamos aprender y trabajar juntos lo mejor que podamos.
                 <h5>Confianza</h5>
                 La confianza en uno mismo permite mejorar el clima laboral y potenciar el proyecto en equipo. Por esta razón, es esencial ayudar a que cada miembro se sienta cómodo con los demás.
