--- a/src/content/pages/1-About us.html
+++ b/src/content/pages/1-About us.html
@@ -10,8 +10,8 @@
     <div class="edition ">
         <div class="edition-header">
             <img src="colorful_copycats.png" width="auto" height="300" alt="Digital Publication with Minimal Computing" />
-            <img src="UMD_Logo-white.png" width="auto" alt="UMD lOGO">
-            <img src="USAL.png" width="auto" alt="UMD lOGO">
+            <img src="UMD_Logo-white.png" width="300" height="auto" alt="UMD lOGO">
+            <img src="USAL.png" width="300" height="auto" alt="UMD lOGO">
 
         </div>
         <div class="edition-en ">
