--- a/src/content/pages/Charter.html
+++ b/src/content/pages/Charter.html
@@ -49,7 +49,7 @@
 
             <h4>Team management</h4>
             Mostly communicate files through email, Slack, and urgent messages through Whatsapp. Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
-            Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank " class="no-lightbox ">https://github.com/41ibi/code_copycats/</a></br>
+            Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank">https://github.com/41ibi/code_copycats/</a></br>
             As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.
             <ul>
                 <li>We will meet once a week to organize pending tasks. We will take into account that each one can work different hours as long as they communicate efficiently. </li>
@@ -100,7 +100,7 @@
                 Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.
                 <h4>Team management</h4>
                 Compartiremos archivos a través de correo electrónico, Slack y mensajes urgentes a través de Whatsapp.</br>
-                El código se mantendrá por medio en GitHub, via el reositorio Copycat. <a href="https://github.com/41ibi/code_copycats/ " target="_blank " class="no-lightbox ">https://github.com/41ibi/code_copycats/</a></br>
+                El código se mantendrá por medio en GitHub, via el reositorio Copycat. <a href="https://github.com/41ibi/code_copycats/ " target="_blank " ">https://github.com/41ibi/code_copycats/</a></br>
                 Habiendo obtenido los detalles del proyecto y conociendo las fortalezas de cada integrante, realizaremos la distribución de roles de manera específica.
                 <ul>
                     <li>Nos encontraremos una vez a la semana para organizar las tareas pendientes. Tomaremos en cuenta los horarios de cada integrante para comunicarnos de manera eficiente.</li>
