--- a/src/content/pages/Charter.html
+++ b/src/content/pages/Charter.html
@@ -74,9 +74,9 @@
             <p>
                 <ul>
                     <li>Julieta Goldsmidt, ella, (ARG), organizadora de tareas.</li>
-                    <li> Nery Gonzalez, she/hers y ella, (US), Traductora. </li>
-                    <li> Alice Bi, she/hers (US) líder tecnica.</li>
-                    <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
+                    <li>Nery Gonzalez, she/hers y ella, (US), Traductora. </li>
+                    <li>Alice Bi, she/hers (US) líder tecnica.</li>
+                    <li>Carlos Javier Nusch, él, La Plata (ARG), Submitter.</li>
                 </ul>
                 <h4>Objetivos</h4>
                 <ul>
@@ -106,7 +106,7 @@
                     <li>Nos encontraremos una vez a la semana para organizar las tareas pendientes. Tomaremos en cuenta los horarios de cada integrante para comunicarnos de manera eficiente.</li>
                     <li>Horarios disponibles: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
                 </ul>
-                <h2>Ethos</h2>
+                <h4>Ethos</h4>
 
                 <p>
                     <ul>
