--- a/src/content/pages/Charter.html
+++ b/src/content/pages/Charter.html
@@ -81,10 +81,10 @@
                 <h4>Objetivos</h4>
                 <ul>
                     <li>Reconocer diferentes enfoques de las humanidades digitales que incluyan análisis crítico de plataformas, tecno-cultura, archivos y diseños.</li>
-                    <li>Aprender a combinar el análisis textual con prácticas sostenibles y humanísticas que consideren a las personas y las herramientas tecnológicas en el centro de nuestro trabajo.</li>
+                    <li>Aprender a combinar el análisis textual con prácticas sostenibles y humanísticas que consideren las herramientas tecnológicas en el centro de nuestro trabajo.</li>
                     <li>Ampliar las habilidades de trabajo colaborativo y producir una distribución eficiente y equilibrada de las tareas.</li>
                     <li>Reconocer las limitaciones y beneficios del trabajo colaborativo, con el fin de aprovechar los recursos.</li>
-                    <li>Compartir y respetar los diferentes conocimientos individuales para resolver posibles problemas y retos grupales.</li>
+                    <li>Compartir y respetar los diferentes conocimientos individuales para resolver posibles retos grupales.</li>
                 </ul>
                 </ul>
                 <h4>Fundamentos</h4>
