--- a/src/content/pages/Charter.html
+++ b/src/content/pages/Charter.html
@@ -89,7 +89,7 @@
                 </ul>
                 <h4>Fundamentos</h4>
                 <h5>Respeto</h5>
-                <p>Respetar y compartir la experiencia de cada uno, reconociendo que todos tienen algo que aportar a nuestro proyecto.</p>
+                <p>Respetar y compartir la experiencia, reconociendo que todos tienen algo que aportar a nuestro proyecto.</p>
                 <h5>Comunicación Honesta</h5>
                 Esperamos comunicarnos con frecuencia y honestidad sobre el progreso, incluidos los problemas, las correcciones y otras soluciones, para que podamos aprender y trabajar juntos lo mejor que podamos.
                 <h5>Confianza</h5>
