--- a/src/content/pages/3-Charter.html
+++ b/src/content/pages/3-Charter.html
@@ -12,7 +12,7 @@
             <div class="title-ed">
                 <img src="Cat_Logo_testEN.png" alt="Team Charter" width="350" height="auto">
                 <h4>Group name: The Code Copycats</h4>
-                <h4><i>Last updated: 2022-09-21</i></h4>
+                <h4><i>Last updated: 2022-12-06</i></h4>
             </div>
 
             <p>
@@ -48,7 +48,7 @@
             Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.
 
             <h4>Team management</h4>
-            Mostly communicate files through email, Slack, and urgent messages through Whatsapp. Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
+            Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</br>
             Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank">https://github.com/41ibi/code_copycats/</a></br>
             As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.
             <ul>
