Minimal puctuation fixes

--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -23,13 +23,13 @@
                 values <code>"place "</code> and <code>"placeGeog "</code> for the <code>@type=</code> attribute as well as the <code>@type</code> attribute with the value <code>"ethnicities "</code> in the element <code><rs></code> for named peoples
                 and ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance "</code>, <code>"cardinal "</code> and <code>"ordinal "</code>                in the <code>@type</code> attribute to indicate distances and amounts. According to this classification, a color and style of text was assigned to improve its reading.
                 <ul>
-                    <li class="place">City, country or region.</li>
-                    <li class="placeGeog">Geographic accident.</li>
-                    <li class="etnia">Ethnicity.</li>
-                    <li class="currency">Currency.</li>
-                    <li class="unit">Distance.</li>
-                    <li class="corr">Word corrected by the editors.</li>
-                    <li class="orig">(Original word that has been corrected).</li>
+                    <li class="place">City, country or region</li>
+                    <li class="placeGeog">Geographic accident</li>
+                    <li class="etnia">Ethnicity</li>
+                    <li class="currency">Currency</li>
+                    <li class="unit">Distance</li>
+                    <li class="corr">Word corrected by the editors</li>
+                    <li class="orig">(Original word that has been corrected)</li>
                 </ul>
             </p>
 
@@ -49,13 +49,13 @@
                 del elemento <code><name></code> con los valores <code>"place "</code> y <code>"placeGeog "</code> para el atributo <code>@type=</code> así como el atributo <code>@type</code> con el valor <code>"etnias "</code> <code><rs></code> para
                 pueblos y etnias nombrados. En un intento por profundizar el análisis del contenido topográfico también se utilizó el elemento <code><measure></code> con los valores <code>"distance "</code>, <code>"cardinal "</code> y <code>"ordinal "</code>                en el atributo <code>@type</code> para indicar distancias y cantidades. De acuerdo a esta clasificación, se asignó un color y estilo de texto para mejorar su lectura.
                 <ul>
-                    <li class="place">Ciudad, país ol región.</li>
-                    <li class="placeGeog">Accidente geográfico.</li>
-                    <li class="etnia">Etnia.</li>
-                    <li class="currency">Moneda.</li>
-                    <li class="unit">Distancia.</li>
-                    <li class="corr">Palabra corregida a cargo de la edición.</li>
-                    <li class="orig">(Palabra original que ha sido corregida).</li>
+                    <li class="place">Ciudad, país o región</li>
+                    <li class="placeGeog">Accidente geográfico</li>
+                    <li class="etnia">Etnia</li>
+                    <li class="currency">Moneda</li>
+                    <li class="unit">Distancia</li>
+                    <li class="corr">Palabra corregida a cargo de la edición</li>
+                    <li class="orig">(Palabra original que ha sido corregida)</li>
                 </ul>
             </p>
         </div>
