--- a/src/content/pages/5-Vocabulary.html
+++ b/src/content/pages/5-Vocabulary.html
@@ -19,7 +19,7 @@
     </li>
     <li>
         <a class="place" target="_blank" href="https://es.wikipedia.org/wiki/C%C3%B3rdoba_(Argentina)">Córdoba</a>|
-        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/C%C3%B3rdoba,_Argentina">Cordoua</a>
+        <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/C%C3%B3rdoba,_Argentina">Córdoba</a>
     </li>
     <li>
         <a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Espa%C3%B1oles">Españoles</a>|
@@ -34,7 +34,7 @@
         <a class="place" target="_blank" href="https://en.wikipedia.org/wiki/Jujuy_Province">Jujuy</a>
     </li>
     <li><a class="etnia" target="_blank" href="https://es.wikipedia.org/wiki/Provincia_de_La_Pampa">Pampistas</a>|
-        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Panpistas</a>
+        <a class="etnia" target="_blank" href="https://en.wikipedia.org/wiki/Pampas">Pampistas</a>
     </li>
     <li><a class="currency" target="_blank" href="https://es.wikipedia.org/wiki/Patac%C3%B3n_(moneda)">Patacón</a>|
         <a class="currency" target="_blank" href="https://en.wikipedia.org/wiki/Patac%C3%B3n_(bond)">Patagon</a>
