--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -11,7 +11,9 @@
         <div class="edition-en ">
             <div class="title-ed">
                 <h3>Our Edition </h3>
-                <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION "> <button class="button-61" role="button">Read</button></a>
+                <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION "> <button class="button-61" role="button">Digital Version</button></a>
+                <a href="https://41ibi.github.io/code_copycats/Acarete_English-bs as a peru.pdf "> <button class="button-61" role="button">Original Version</button></a>
+
             </div>
 
             <p>This bilingual edition of the text Relato de un viaje por el Río de la Plata was carried out entirely following the principles of Minimal Computing, aimed at optimizing the available resources so that the text can be reached by the largest
@@ -38,7 +40,7 @@
             <div class="title-ed">
                 <h3>Nuestra Edición</h3>
                 <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION "><button  class="button-61" role="button">Edición digital</button></a>
-                <a href="https://41ibi.github.io/code_copycats/Acarete_esp-bs as a peru.pdf " target="_blank">Edición original</a>
+                <a href="https://41ibi.github.io/code_copycats/Acarete_esp-bs as a peru.pdf" target="_blank">Edición original</a>
             </div>
 
             <p>La presente edición bilingüe del texto Relato de un viaje por el Río de la Plata fue realizada enteramente siguiendo los principios de la Computación Mínima, orientada a optimizar los recursos disponibles para que el texto pueda ser alcanzado
