--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -40,7 +40,7 @@
             <div class="title-ed">
                 <h3>Nuestra Edición</h3>
                 <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION "><button  class="button-61" role="button">Edición digital</button></a>
-                <a href="https://41ibi.github.io/code_copycats/Acarete_esp-bs as a peru.pdf" target="_blank">Edición original</a>
+                <a href="https://41ibi.github.io/code_copycats/Acarete_esp-bs as a peru.pdf" target="_blank"><button  class="button-61" role="button"></button>Edición original</button></a>
             </div>
 
             <p>La presente edición bilingüe del texto Relato de un viaje por el Río de la Plata fue realizada enteramente siguiendo los principios de la Computación Mínima, orientada a optimizar los recursos disponibles para que el texto pueda ser alcanzado
